openhab-deployment.yaml
# -*- mode: yaml; coding: utf-8 -*-

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: openhab
  labels:
   app: openhab
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openhab
    spec:
      hostNetwork: true
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        node-role.kubernetes.io/worker: worker         
      containers:
      - name: openhab
        image: k3s-master-1:5000/openhab:2.5.0.M3
        imagePullPolicy: Always
#        image: 471117/openhab:latest
#        imagePullPolicy: IfNotPresent
        ports:
#        - containerPort: 8080
#          name: http
#          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8101
          name: console
          protocol: TCP
        volumeMounts:
        - name: etc-localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: openhab-conf
          mountPath: /openhab/conf
          readOnly: false
        - name: openhab-userdata
          mountPath: /openhab/userdata
          readOnly: false
        - name: openhab-addons
          mountPath: /openhab/addons
          readOnly: false
        - name: openhab-lib
          mountPath: /openhab/lib
          readOnly: false
        - name: openhab-java
          mountPath: /openhab/.java
          readOnly: false
        - name: openhab-karaf
          mountPath: /openhab/.karaf
          readOnly: false
      volumes:
      - name: etc-localtime
        hostPath:
          path: /usr/share/zoneinfo/Europe/Stockholm
      - name: openhab-conf
        hostPath:
          path: /openhab/conf
      - name: openhab-userdata
        hostPath:
          path: /openhab/userdata
      - name: openhab-addons
        hostPath:
          path: /openhab/addons
      - name: openhab-lib
        hostPath:
          path: /openhab/lib
      - name: openhab-java
        hostPath:
          path: /openhab/.java
      - name: openhab-karaf
        hostPath:
          path: /openhab/.karaf
      terminationGracePeriodSeconds: 300
