openhab-service.yaml
# -*- mode: yaml; coding: utf-8 -*-

apiVersion: v1
kind: Service
metadata:
  name: openhab
  labels:
    app: openhab
spec:
#  type: NodePort
  selector:
    app: openhab
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
#      nodePort: 30080
      name: openhab-http
    - port: 8443
      protocol: TCP
      targetPort: 8443
#      nodePort: 30443
      name: openhab-https
    - port: 8101
      protocol: TCP
      targetPort: 8101
      name: openhab-console
#      nodePort: 30101
